--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test:hint": "parallelshell 'npm run mocha' 'npm run watch:jshint'",
     "watch:jshint": "watch 'jshint ./ --reporter=./node_modules/jshint-stylish/index.js' ./",
     "mocha": "mocha test --watch --recursive",
-    "test" : "mocha test",
+    "test": "mocha test",
     "relink": "npm unlink && npm link",
     "build": "npm run relink"
   },
-  "repository": "",
+  "repository": "perchten/rblb-utils",
   "author": {
     "name": "Alastair Brayne",
     "email": "al@builtbybrayne.com",
@@ -21,13 +21,13 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "chai-as-promised": "^6.0.0",
-    "sinon-as-promised": "^4.0.2",
-    "sinon-chai": "^2.8.0",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0",
     "mocha": "^2.3.4",
     "parallelshell": "^2.0.0",
     "sinon": "^1.17.7",
+    "sinon-as-promised": "^4.0.2",
+    "sinon-chai": "^2.8.0",
     "watch": "^0.17.1"
   },
   "dependencies": {}
