--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "watch": "^0.17.1"
   },
   "dependencies": {
-    "es6-promise-peek": "^1.0.0"
+    "es6-promise-peek": "^1.0.0",
+    "help": "^3.0.2"
   }
 }
